--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
 anyio==3.6.2
+certifi==2022.9.24
 click==8.1.3
 fastapi==0.86.0
 h11==0.14.0
+httpcore==0.15.0
+httpx==0.23.0
 idna==3.4
+numpy==1.23.4
+pandas==1.5.1
 pydantic==1.10.2
+python-dateutil==2.8.2
+pytz==2022.6
+rfc3986==1.5.0
+six==1.16.0
 sniffio==1.3.0
 starlette==0.20.4
 typing_extensions==4.4.0
